compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__nested_multiexpr_blocks.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 36
expression: "\npub fn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n  }\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  let x = {
    1
    {
      2
      3
    }
  }
  x
}


----- COMPILED JAVASCRIPT
export function go() {
  let _block;
  {
    1;
    {
      2;
      _block = 3;
    }
  }
  let x = _block;
  return x;
}
