compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__nested_multiexpr_blocks_with_pipe.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 54
expression: "\npub fn add1(a) {\n  a + 1\n}\npub fn go() {\n  let x = {\n    1\n    {\n      2\n      3 |> add1\n    } |> add1\n  }\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn add1(a) {
  a + 1
}
pub fn go() {
  let x = {
    1
    {
      2
      3 |> add1
    } |> add1
  }
  x
}


----- COMPILED JAVASCRIPT
export function add1(a) {
  return a + 1;
}

export function go() {
  let _block;
  {
    1;
    let _block$1;
    {
      2;
      let _pipe = 3;
      _block$1 = add1(_pipe);
    }
    let _pipe = _block$1;
    _block = add1(_pipe);
  }
  let x = _block;
  return x;
}
