compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__nested_simple_blocks.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 20
expression: "\npub fn go() {\n  let x = {\n    {\n      3\n    }\n  }\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  let x = {
    {
      3
    }
  }
  x
}


----- COMPILED JAVASCRIPT
export function go() {
  let x = 3;
  return x;
}
