compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__pattern_assignment_last_in_block.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 314
expression: "\npub fn main() {\n  let a = {\n    let b = #(1, 2)\n    let #(x, y) = b\n  }\n  a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let a = {
    let b = #(1, 2)
    let #(x, y) = b
  }
  a
}


----- COMPILED JAVASCRIPT
export function main() {
  let _block;
  {
    let b = [1, 2];
    let x;
    let y;
    x = b[0];
    y = b[1];
    _block = b;
  }
  let a = _block;
  return a;
}
