compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 141
expression: "\npub fn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  {
    1
    2
  } == 1
}


----- COMPILED JAVASCRIPT
export function go() {
  return (() => {
    1;
    return 2;
  })() === 1;
}
