compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__sequences.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 114
expression: "\npub fn go() {\n  \"one\"\n  \"two\"\n  \"three\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  "one"
  "two"
  "three"
}


----- COMPILED JAVASCRIPT
export function go() {
  "one";
  "two";
  return "three";
}
